--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -50,23 +50,30 @@ form {
 
 input {
   
-  
-  margin-right: 10px;
+  margin-left: 0px;
+  margin-right: 5px;
   padding: 8px;
   border: 1px solid #ccc;
   border-radius: 4px;
 }
 
 img{
+  margin-left: 0px;
   margin-right: 10px;
   padding: 0px;
+  margin-bottom: 0px;
 
+}
+
+img svg {
+  width: 40px;
+  height: 40px;
 }
 
 button {
   
   padding: 8px 16px;
-  background-color: #ff00b3;
+  background-color: #6f00ff;
   color: #fff;
   border: none;
   border-radius: 4px;
@@ -77,3 +84,33 @@ button:hover {
   background-color: #0056b3;
 }
 
+.home-page {
+  background: linear-gradient(tan,red);
+  position: relative;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.youtube-image {
+  
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+}
+
+.youtube-text {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 48px;
+  font-weight: bold;
+  color: #4e1111;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
